# poojasukhdeve.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  about.qmd  contact.html  contact.qmd  cv.html  cv.qmd  index.html  index.qmd  projects.html  projects.qmd  pyproject.toml  requirements.txt  search.json  sitemap.xml  styles.css
.github/workflows/: public.yml
.quarto/idx/: about.qmd.json  index.qmd.json
.quarto/xref/: 828729e6  INDEX
_site/: about.html  contact.html  index.html  projects.html  robots.txt  search.json  sitemap.xml
