[project]
name = "poojasukhdeve-github-io"
version = "0.0.1"
description = "Initial Website for Pooja Sukhdeve GitHub"
authors = [
    {name = "Pooja S Sukhdeve",email = "psukhdev@bu.edu"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.0.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "poojasukhdeve"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
